<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFC107">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ir_registro"
            android:layout_gravity="right"
            android:layout_marginLeft="40dp"
            android:layout_margin="10dp"
            android:textColor="#F4F7F8"
            android:backgroundTint="#55ABEF"/>

        <TextView
            android:id="@+id/bienvenido"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Pizzeria VitoLugini"
            android:textSize="25dp"
            android:textColor="#F4F7F8"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginLeft="60dp"/>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:layout_marginTop="0dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txtuser"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:gravity="right"
            android:textSize="18dp"
            android:layout_marginLeft="50dp"/>
        <EditText
            android:id="@+id/ediuser"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/edituser"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtpass"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:gravity="right"
            android:textSize="18dp"
            android:layout_marginLeft="70dp"/>

        <EditText
            android:id="@+id/edipass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/editpass"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btninicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btninicio"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="90dp"
            android:backgroundTint="#F82727"/>


    </LinearLayout>

    </LinearLayout>

</RelativeLayout>