<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario_Registro"
    android:background="#E4DA7D">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Registro"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="#2196F3"
            android:layout_marginLeft="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtuser"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:text="@string/user"
            android:textStyle="normal"
            android:textSize="20dp"
            android:textColor="#E91E63"/>

        <EditText
            android:id="@+id/ediuser"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="105dp"
            android:hint="@string/edituser"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/txtpass"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="160dp"
            android:gravity="right"
            android:text="@string/pass"
            android:textStyle="normal"
            android:textSize="20dp"
            android:textColor="#E91E63"/>

        <EditText
            android:id="@+id/edipass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="165dp"
            android:hint="@string/editpass"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnregistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="230dp"
            android:text="Registrate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#0BB6A6"/>

        <Button
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Regresar a pantalla de loguin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="290dp"
            android:layout_marginLeft="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#FFEB3B"/>



</RelativeLayout>